--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     
 </head>
 <body>
-    <h1>Esteticar Vigo</h1>
+    <header>
+       <img src="img/logotipo-esteticar-fondo-transparente.webp" alt="">
+       <nav>
+            <ul>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+       </nav>
+    </header>
+    
 
 </body>
 </html>
