--- a/index.html
+++ b/index.html
@@ -18,7 +18,45 @@
             </ul>
        </nav>
     </header>
-    
+    <div class="main-div">
+        <img src="img/main-picture.PNG" alt="" class="main-picture">
+        <p class="main-text">Tu taller de confianza</p>
+    </div>
+    <div class="services">
+        <h2>Servicios</h2>
+        <div>
+            <img>
+            <h3>Chapa y pintura</h3>
+        </div>
+        <div>
+            <img>
+            <h3>Aceites</h3>
+        </div>
+        <div>
+            <img>
+            <h3>Ruedas</h3>
+        </div>
+        <div>
+            <img>
+            <h3>Lavado</h3>
+        </div>
+        <div>
+            <img>
+            <h3>Frenos</h3>
+        </div>
+        <div>
+            <img>
+            <h3>Baterías</h3>
+        </div>
+        <div>
+            <img>
+            <h3>Diagnosis</h3>
+        </div>
+        <div>
+            <img>
+            <h3>Escapes</h3>
+        </div>
+    </div>
 
 </body>
 </html>
