--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
        <img src="img/logotipo-esteticar-fondo-transparente.webp" alt="">
        <nav>
             <ul>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#services">Servicios</a></li>
+                <li><a href="#contact">Contacto</a></li>
             </ul>
        </nav>
     </header>
     <div class="main-div">
-        <img src="img/main-picture.PNG" alt="" class="main-picture">
+        <img src="img/main-picture.webp" alt="" class="main-picture">
         <p class="main-text">Tu taller de confianza</p>
     </div>
     <div class="services">
-        <h2>Servicios</h2>
+        <h2 id="services">Servicios</h2>
         <div>
             <img>
             <h3>Chapa y pintura</h3>
@@ -56,6 +56,11 @@
             <img>
             <h3>Escapes</h3>
         </div>
+    </div>
+    <div class="contact">
+        <h2 id="contact">Contacto</h2>
+        <p>Carretera Bembrive Nº 213</p>
+        <p>Tel.: 666 834 873</p>
     </div>
 
 </body>
