Img services ready

--- a/index.html
+++ b/index.html
@@ -25,35 +25,35 @@
     <div class="services">
         <h2 id="services">Servicios</h2>
         <div>
-            <img>
+            <img src="img/service-icons/car-painting.png">
             <h3>Chapa y pintura</h3>
         </div>
         <div>
-            <img>
+            <img src="img/service-icons/oil-bottle.png">
             <h3>Aceites</h3>
         </div>
         <div>
-            <img>
+            <img src="img/service-icons/tire.png">
             <h3>Ruedas</h3>
         </div>
         <div>
-            <img>
+            <img src="img/service-icons/car-wash.png">
             <h3>Lavado</h3>
         </div>
         <div>
-            <img>
+            <img src="img/service-icons/freno-de-disco.png">
             <h3>Frenos</h3>
         </div>
         <div>
-            <img>
+            <img src="img/service-icons/car-battery.png">
             <h3>Baterías</h3>
         </div>
         <div>
-            <img>
+            <img src="img/service-icons/car-repair.png">
             <h3>Diagnosis</h3>
         </div>
         <div>
-            <img>
+            <img src="img/service-icons/tubo-de-escape.png">
             <h3>Escapes</h3>
         </div>
     </div>
