Social media added

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
         <h2 id="contact">Contacto</h2>
         <p>Carretera Bembrive Nº 213</p>
         <p>Tel.: 666 834 873</p>
+        <p>esteticarvigo@hotmail.com</p>
+    </div>
+
+    <div class="social-media">
+        <a href="https://www.instagram.com/esteticarvigo/?hl=en"><img src="img/instagram.svg"></a>
     </div>
 
 </body>
