--- a/index.html
+++ b/index.html
@@ -1,72 +1,57 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
+<html lang="en">
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.min.css">
     <title>Esteticar Vigo</title>
-    
-</head>
-<body>
-    <header>
-       <img src="img/logotipo-esteticar-fondo-transparente.webp" alt="">
-       <nav>
-            <ul>
-                <li><a href="#services">Servicios</a></li>
-                <li><a href="#contact">Contacto</a></li>
-            </ul>
-       </nav>
+  </head>
+  <body> 
+    <header><img src="img/logotipo-esteticar-fondo-transparente.webp" alt="logo esteticar">
+      <nav>
+        <ul>
+          <li><a href="#services">Servicios</a></li>
+          <li><a href="#contact">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
-    <div class="main-div">
-        <img src="img/main-picture.webp" alt="" class="main-picture">
-        <p class="main-text">Tu taller de confianza</p>
+    <div class="main-div"><img class="main-picture" src="img/main-picture.webp" alt="imagen del taller con coches">
+      <p class="main-text">Tu taller de confianza</p>
     </div>
     <div class="services">
-        <h2 id="services">Servicios</h2>
-        <div>
-            <img src="img/service-icons/car-painting.png">
-            <h3>Chapa y pintura</h3>
-        </div>
-        <div>
-            <img src="img/service-icons/oil-bottle.png">
-            <h3>Aceites</h3>
-        </div>
-        <div>
-            <img src="img/service-icons/tire.png">
-            <h3>Ruedas</h3>
-        </div>
-        <div>
-            <img src="img/service-icons/car-wash.png">
-            <h3>Lavado</h3>
-        </div>
-        <div>
-            <img src="img/service-icons/freno-de-disco.png">
-            <h3>Frenos</h3>
-        </div>
-        <div>
-            <img src="img/service-icons/car-battery.png">
-            <h3>Baterías</h3>
-        </div>
-        <div>
-            <img src="img/service-icons/car-repair.png">
-            <h3>Diagnosis</h3>
-        </div>
-        <div>
-            <img src="img/service-icons/tubo-de-escape.png">
-            <h3>Escapes</h3>
-        </div>
+      <h2 id="services">Servicios</h2>
+      <div><img src="img/service-icons/car-painting.png">
+        <h3>Chapa y pintura</h3>
+      </div>
+      <div><img src="img/service-icons/oil-bottle.png">
+        <h3>Aceites</h3>
+      </div>
+      <div><img src="img/service-icons/tire.png">
+        <h3>Ruedas</h3>
+      </div>
+      <div><img src="img/service-icons/car-wash.png">
+        <h3>Lavado</h3>
+      </div>
+      <div><img src="img/service-icons/freno-de-disco.png">
+        <h3>Frenos</h3>
+      </div>
+      <div><img src="img/service-icons/car-battery.png">
+        <h3>Baterías</h3>
+      </div>
+      <div><img src="img/service-icons/car-repair.png">
+        <h3>Diagnosis</h3>
+      </div>
+      <div><img src="img/service-icons/tubo-de-escape.png">
+        <h3>Escapes</h3>
+      </div>
     </div>
     <div class="contact">
-        <h2 id="contact">Contacto</h2>
-        <p>Carretera Bembrive Nº 213</p>
-        <p>Tel.: 666 834 873</p>
-        <p>esteticarvigo@hotmail.com</p>
+      <h2 id="contact">Contacto</h2>
+      <p>Carretera Bembrive Nº 213</p>
+      <p>Tel.: 666 834 873</p>
+      <p>esteticarvigo@hotmail.com</p>
     </div>
-
-    <div class="social-media">
-        <a href="https://www.instagram.com/esteticarvigo/?hl=en"><img src="img/instagram.svg"></a>
-    </div>
-
-</body>
+    <div class="social-media"><a href="https://www.instagram.com/esteticarvigo/?hl=en">  <img src="img/instagram.svg"></a></div>
+  </body>
 </html>
